--- a/ContactApp1/create.html
+++ b/ContactApp1/create.html
@@ -13,21 +13,10 @@
 			<button type="submit" value="Submit">Submit</button>
 			<button type="reset" value="Reset">Reset</button>
 		</div>
+	</form>
 		<br>
 
-
-			<!-- <hr>
-				<label for="Name"><br>Name</b></label> 
-				<input type="text" placeholder="Enter Your Name" name="Name" required></br>
-
-				<label for="Contact Number"><br>Mobile Number</b></label>
-				<input type="text" placeholder="Enter your Number" name="number" required></br><br> -->
-				<!-- <button type="button" align="center">Save</button> -->
-				<!-- <button type="submit" value="Submit">Submit</button>
-				<button type="reset" value="Reset">Reset</button>
-			<hr>
-			 -->
-			<!-- <form action="upload" method="post" enctype="multipart/form-data">
+			<form action="upload" method="post" enctype="multipart/form-data">
 				<div class="container">
 				<h5>File Upload</h5>
 				<input type="file" name="txtPhoto"/> <br /><br />
@@ -35,7 +24,7 @@
 				<button type="reset" value="Reset">Reset</button>
 				</div>
 
-			</form> -->
+			</form>
   
 </body>
 
