--- a/MockExam/src/main/webapp/log.html
+++ b/MockExam/src/main/webapp/log.html
@@ -44,7 +44,7 @@
 						<input type="checkbox">Remember Me
 					</div>
 					<div class="form-group">
-						<input type="submit" value="Skip" class="btn float-right login_btn">
+						<input type="submit" value="Skip" class="btn float-right login_btn" align="right">
 						<input type="submit" value="Login" class="btn float-right login_btn">
 					</div>
 				</form>
