http://jira.bytatech.com:8080/browse/IN-8118"http://jira.bytatech.com:8080/browse/IN-8119

--- a/ContactApp/index.html
+++ b/ContactApp/index.html
@@ -23,7 +23,7 @@
 	<div class="container">
 		<h2>CONTACT APP</h2>
 		<a href="add.html"><button value="add" style="height: 35px;">ADD CONTACT</button></a>
-		<a href="view.jsp"><button value="view" style="height: 35px;">VIEW CONTACTS</button></a>
+		<a href="viewContact"><button value="view" style="height: 35px;">VIEW CONTACTS</button></a>
 		<a href=""><button value="search" style="height: 35px;">SEARCH CONTACTS</button></a>
 	</div>	
 </body>
