http://jira.bytatech.com:8080/browse/IN-8167

--- a/ContactApp/add.html
+++ b/ContactApp/add.html
@@ -13,8 +13,8 @@
 	</head>
 	<body>
 		<h1>Adding Contact</h1>
-		<form  method="POST" action="add.jsp" >
-			Id:<input type="text" placeholder="Your Id" name="id" required><br><br>
+		<form  method="GET" action="contactAdd" >
+			
 			FirstName:<input type="text" placeholder="Your FirstName" name="fname" required><br><br>
 			LastName:<input type="text" placeholder="Your LastName" name="lname" required><br><br>
 			number:<input type="text" placeholder="Your Number" name="number" required><br><br>
