--- a/ContactApp/index.html
+++ b/ContactApp/index.html
@@ -12,8 +12,8 @@
 	</head>
 	<body>
 		<h1>Contact APP</h1>
-		<a href="add.html"><button style="width:50px; height:35px;">ADD</button></a>
-		<a href="read.jsp"><button style="width:50px; height:35px;">READ</button></a>
+		<a href="add.html"><button style="width:70px; height:40px;">Add Contact</button></a>
+		<a href="view.jsp"><button style="width:70px; height:40px;">View Contacts</button></a>
 		
 			
 			
