--- a/ContactApp/index.html
+++ b/ContactApp/index.html
@@ -24,7 +24,7 @@
 		<h2>CONTACT APP</h2>
 		<a href="add.html"><button value="add" style="height: 35px;">ADD CONTACT</button></a>
 		<a href="viewContact"><button value="view" style="height: 35px;">VIEW CONTACTS</button></a>
-		<a href=""><button value="search" style="height: 35px;">SEARCH CONTACTS</button></a>
+		<a href="search.html"><button value="search" style="height: 35px;">SEARCH CONTACTS</button></a>
 	</div>	
 </body>
 </html>
