--- a/ContactApp/index.html
+++ b/ContactApp/index.html
@@ -1,19 +1,40 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Contact APP</title>
+		<title>Contact App</title>
 	<style>
-		body
-		{
+		body{
+		 background-color: lightblue;	
 		 margin-top:250px;
 		 text-align:center;
 		}
+
+		h1 {
+  			color: black;
+  			text-align: center;
+  			font-family: verdana;
+			}
+	.button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+
+   border-radius: 5px;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}	
+	.button:hover {  background-color: black; }
 	</style>
 	</head>
 	<body>
-		<h1>Contact APP</h1>
-		<a href="add.html"><button style="width:70px; height:40px;">Add Contact</button></a>
-		<a href="view.jsp"><button style="width:70px; height:40px;">View Contacts</button></a>
+		<h1>Contact App</h1>
+		<a href="add.html"><button class="button">Add Contact</button></a>
+		<a href="view.jsp"><button class="button">View Contacts</button></a>
 		
 			
 			
