http://jira.bytatech.com:8080/browse/IN-8318

--- a/ContactApp/index.html
+++ b/ContactApp/index.html
@@ -36,9 +36,9 @@
 		<a href="add.html"><button class="button">Add Contact</button></a>
 		<a href="view.jsp"><button class="button">View Contacts</button></a>
 		
-			
-			
-			
-				
+		<form action="result.jsp" method="GET" >			
+			Search Name:<input type="text" placeholder="Search Name" name="searchname" required><br><br>
+			<button class="button">Search</button>
+		</form>		
 	</body>
 </html>
