--- a/ContactApp/add.html
+++ b/ContactApp/add.html
@@ -40,7 +40,7 @@
 		<!-- 	<button type="submit">Add</button> --><input type="submit" class="button" value="Add">
 			<!-- <button type="reset">Reset</button> --><input type="reset" class="button" value="Reset">
 		</form>
-		<a href="index.html"><!-- <button type="submit">Home</button> --><input type="submit" class="button" value="Home"></a>	
+		<a href="index.jsp"><!-- <button type="submit">Home</button> --><input type="submit" class="button" value="Home"></a>	
 		
 	</body>
 </html>
