http://jira.bytatech.com:8080/browse/IN-8536

--- a/MockExam/my-app/src/main/webapp/index.html
+++ b/MockExam/my-app/src/main/webapp/index.html
@@ -16,6 +16,7 @@
 			padding: 50px;
 			padding-top: 5px;
 			margin: 35px;
+			border-radius: 45px;
 
 		}
 		#btn{
@@ -43,7 +44,7 @@
 		</p>
 	</div>
 	<div id="bbtn">
-		<button id="btn" style="height: 50px;width: 100px " >Start Exam</button>
+		<a href="read"><button id="btn" style="height: 50px;width: 100px " >Start Exam</button></a>
 	</div>
 </body>
 </html>
