http://jira.bytatech.com:8080/browse/IN-8786http://jira.bytatech.com:8080/browse/IN-9122

--- a/MockExam/mockexam-app/src/main/webapp/add.html
+++ b/MockExam/mockexam-app/src/main/webapp/add.html
@@ -40,7 +40,7 @@
 </head>
 <body>
 	<div class="container">
-		<form action="addExamData" method="GET">
+		<form action="admin/addExamData" method="GET">
 		<h2>ADD QUESTION</h2>	
 		Question &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <textarea name="question" placeholder="Enter Question" required=""></textarea> <br><br>
 		Opt1  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="opt1" placeholder="Enter Option 1" required=""><br><br>
@@ -48,8 +48,10 @@
 		Opt3&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <input type="text" name="opt3" placeholder="Enter Option 3" required=""><br><br>
 		Opt4&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <input type="text" name="opt4" placeholder="Enter Option 4" required=""><br><br>
 		Answer&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="answer" placeholder="Enter Answer" required=""><br><br>
-		<button value="regbtn">ADD</button>    <button type="reset" value="regbtn">RESET</button>           <a href="http://localhost:8080/mockexam/admin.jsp"><button value="homebtn">Home</button></a>
-		</form>	
+		<button value="addbtn">ADD</button>             
+		</form>
+		 <button type="reset" value="regbtn">RESET</button>	
+		 <a href="http://localhost:8080/mockexam/admin/admin.jsp"><button value="homebtn">Home</button></a>
 		<br>
 	</div>
 
