http://jira.bytatech.com:8080/browse/IN-6602

--- a/MockExam/New folder/MockExam/introduction.html
+++ b/MockExam/New folder/MockExam/introduction.html
@@ -13,7 +13,8 @@
   		 <h3>4...................</h3>
  		 <h3>5...................</h3>
    
-    <a href="login.jsp"><button class="button">Start Exam</button></a>
+    <a href="adduesr.html"><button class="button">New User</button></a>
+    <a href="login.html"><button class="button">Login</button></a>
     </div>
 		</form>
 		<a href="index.jsp"><input type="submit" class="button" value="Home"></a>	
