http://jira.bytatech.com:8080/browse/IN-6667

--- a/MockExam/New folder/MockExam/introduction.html
+++ b/MockExam/New folder/MockExam/introduction.html
@@ -5,6 +5,7 @@
 		
 	</head>
 	<body>
+		<form action="exam.jsp" method="GET">
 		<h1>Instractions </h1>
 		<div>
     	 <h3>1.Students  should take Hallticket</h3>
@@ -13,8 +14,10 @@
   		 <h3>4...................</h3>
  		 <h3>5...................</h3>
    
-    <a href="adduesr.html"><button class="button">New User</button></a>
-    <a href="login.html"><button class="button">Login</button></a>
+
+   
+    <input type="hidden" name="count" value="0">
+  <button class="button">Start Exam</button>
     </div>
 		</form>
 		<a href="index.jsp"><input type="submit" class="button" value="Home"></a>	
