http://jira.bytatech.com:8080/browse/IN-6826

--- a/MockExam/New folder/MockExam/login.html
+++ b/MockExam/New folder/MockExam/login.html
@@ -35,7 +35,7 @@
 		<form  method="GET" action="userLogin" >
 			
 			Name :<input type="text" placeholder="Your Name" name="name" required><br><br>
-			Password :<input type="text" placeholder="Your Password" name="password" required><br><br>
+			Password :<input type="password" placeholder="Your Password" name="password" required><br><br>
 		
 		<input type="submit" class="button" value="Login">
 		</form>
