http://jira.bytatech.com:8080/browse/IN-6940

--- a/MockExam/New folder/MockExam/admin.html
+++ b/MockExam/New folder/MockExam/admin.html
@@ -4,7 +4,7 @@
 		<title>Admin Login</title>
 			<style>
 		body{
-		 background-color: white ;	
+		 background-color:#C2F6A6 ;	
 		 margin-top:250px;
 		 text-align:center;
 		}
