--- a/MockExam/New folder/MockExam/login.html
+++ b/MockExam/New folder/MockExam/login.html
@@ -4,7 +4,7 @@
 		<title>Login User</title>
 			<style>
 		body{
-		 background-color: white ;	
+		 background-color: #C2F6A6 ;	
 		 margin-top:250px;
 		 text-align:center;
 		}
@@ -25,6 +25,18 @@
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
+
+  /*	.button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;*/
 
   .button:hover {  background-color: black;}
 }	
