http://jira.bytatech.com:8080/browse/IN-7300

--- a/MockExam/maven/MockExam/src/main/webapp/protected/admin.html
+++ b/MockExam/maven/MockExam/src/main/webapp/protected/admin.html
@@ -35,6 +35,7 @@
 		<div>
     <a href="add.html"><button class="button">ADD Question</button></a>
     <a href="view.jsp"><button class="button">View Questions</button></a>
+    <a href="results.jsp"><button class="button">View REsults</button></a>
     </div>
 		</form>
 		<a href="index.jsp"><input type="submit" class="button" value="Home"></a>	
