http://jira.bytatech.com:8080/browse/IN-7878

--- a/MockExam/index.html
+++ b/MockExam/index.html
@@ -33,7 +33,10 @@
       <br>
       <br>
       <br>
-   <button class="button">Admin </button>
+      <a href="addquestion.html">
+      <button class="button">Admin </button>
+      </a>
+  
    <button class="button">User</button>
     </div>
    </body>
