--- a/MockExam/AdminOptions.html
+++ b/MockExam/AdminOptions.html
@@ -33,8 +33,8 @@
       <br>
       <br>
       <br>
-      <a href="AdminOption.html">
-      <button class="button">Admin  </button>
+      <a href="addquestion.html">
+      <button class="Add Question ">Admin </button>
       </a>
   
    <button class="button">User</button>
