http://jira.bytatech.com:8080/browse/IN-7954

--- a/MockExam/AdminOptions.html
+++ b/MockExam/AdminOptions.html
@@ -34,10 +34,15 @@
       <br>
       <br>
       <a href="addquestion.html">
-      <button class="Add Question ">Admin </button>
+      <button class="Add Question ">Add Question </button>
       </a>
-  
-   <button class="button">User</button>
+      <a href="viewQuestions.jsp">
+      <button class="View Question">Add Question </button>
+      </a>
+
+      <a href="viewQuestions.jsp">
+      <button class="Edit Question">Add Question </button>
+      </a>
     </div>
    </body>
 </html>
