--- a/MockExam/index.html
+++ b/MockExam/index.html
@@ -33,7 +33,7 @@
       <br>
       <br>
       <br>
-      <a href="AdminOption.html">
+      <a href="AdminOptions.html">
       <button class="button">Admin  </button>
       </a>
   
