http://jira.bytatech.com:8080/browse/IN-7968

--- a/MockExam/AdminOptions.html
+++ b/MockExam/AdminOptions.html
@@ -37,11 +37,11 @@
       <button class="Add Question ">Add Question </button>
       </a>
       <a href="viewQuestions.jsp">
-      <button class="View Question">Add Question </button>
+      <button class="View Question">View Question </button>
       </a>
 
       <a href="viewQuestions.jsp">
-      <button class="Edit Question">Add Question </button>
+      <button class="Edit Question">Edit Question </button>
       </a>
     </div>
    </body>
