http://jira.bytatech.com:8080/browse/IN-8043

--- a/MockExam/index.html
+++ b/MockExam/index.html
@@ -3,7 +3,7 @@
     <title>Mock Exam</title>
     	<style>
 		body{
-		 background-color:red ;	
+		 background-color:#f7cac9 ;	
 		
 		}
 		h1 {
@@ -12,14 +12,14 @@
   			font-family: courier;
 			}
 	.button {
-  background-color: green;
-  color: white;
+  padding: 15px 25px;
+  font-size: 24px;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
   cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
   .button:hover {  background-color: black;}
 }	
 	</style>
@@ -33,7 +33,7 @@
       <br>
       <br>
       <br>
-      <a href="AdminOptions.html">
+      <a href="adminlogin.html">
       <button class="button">Admin  </button>
       </a>
   
