http://jira.bytatech.com:8080/browse/IN-8049

--- a/MockExam/AdminOptions.html
+++ b/MockExam/AdminOptions.html
@@ -3,32 +3,34 @@
     <title>Mock Exam</title>
     	<style>
 		body{
-		 background-color:red ;	
-		
-		}
+    		 background-color:#FF6F61;
+         text-align:center;	
+		    }
 		h1 {
   			color: black;
   			text-align: center;
   			font-family: courier;
-			}
-	.button {
-  background-color: green;
-  color: white;
+  			}
+ .button {
+  position: relative;
+  background-color: #4CAF50;
+  border: none;
+  font-size: 28px;
+  color: #FFFFFF;
+  padding: 20px;
+  width: 200px;
   text-align: center;
+  -webkit-transition-duration: 0.4s; 
+  transition-duration: 0.4s;    
   text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
+  overflow: hidden;
   cursor: pointer;
-  .button:hover {  background-color: black;}
-}	
+  }
 	</style>
   </head>
 
    <body>
-
-   	<div>
-   		 <h1>MockExam</h1>
+  	  <h1>MockExam</h1>
       <br>
       <br>
       <br>
@@ -41,8 +43,7 @@
       </a>
 
       <a href="viewQuestions.jsp">
-      <button class="Edit Question">Edit Question </button>
+      <button class="Edit Question">Edit Question </button><br>         
       </a>
-    </div>
    </body>
 </html>
