--- a/MockExam/adminlogin.html
+++ b/MockExam/adminlogin.html
@@ -4,7 +4,7 @@
 		<title>Login User</title>
 			<style>
 		body{
-		 background-color: blue ;	
+		 background-color: #f7cac9  ;	
 		 margin-top:250px;
 		 text-align:center;
 		}
@@ -36,12 +36,12 @@
 			<h1>Login Details</h1>
 		<form  method="GET"  >
 			
-			Name :<input type="text" placeholder="Admin Name" name="username" required><br><br>
+			Name : &nbsp &nbsp&nbsp<input type="text" placeholder="Admin UserName" name="username" required><br><br>
 			Password :<input type="password" placeholder="Admin  Password" name="password" required><br><br>
 		
 		<input type="button" class="button" value="Login" onclick="check(this.form)">
 		</form>
-		<a href="index.jsp"><input type="submit" class="button" value="Home"></a>	
+		<a href="index.html"><input type="submit" class="button" value="Home"></a>	
 
 		<script language="javascript">
 		function check(form)/*function to check userid & password*/
@@ -49,7 +49,7 @@
 		 /*the following code checkes whether the entered userid and password are matching*/
 		 if(form.username.value == "admin" && form.password.value == "admin")
 		  {
-		    window.open("AdminOptions.html")/*opens the target page while Id & password matches*/
+		    window.open("AdminOptions.html","_self")/*opens the target page while Id & password matches*/
 		  }
 		 else
 		 {
