--- a/MockExam/index.html
+++ b/MockExam/index.html
@@ -4,6 +4,7 @@
     	<style>
 		body{
 		 background-color:#f7cac9 ;	
+      text-align:center;  
 		
 		}
 		h1 {
@@ -11,7 +12,7 @@
   			text-align: center;
   			font-family: courier;
 			}
-	.button {
+.button {
   padding: 15px 25px;
   font-size: 24px;
   text-align: center;
@@ -20,8 +21,15 @@
   color: #fff;
   background-color: #4CAF50;
   border: none;
-  .button:hover {  background-color: black;}
-}	
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
 	</style>
   </head>
 
@@ -36,7 +44,7 @@
       <a href="adminlogin.html">
       <button class="button">Admin  </button>
       </a>
-  
+      &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
    <button class="button">User</button>
     </div>
    </body>
