http://jira.bytatech.com:8080/browse/IN-8060

--- a/MockExam/index.html
+++ b/MockExam/index.html
@@ -32,20 +32,19 @@
 }
 	</style>
   </head>
-
-   <body>
-
+  <body>
    	<div>
-   		 <h1>MockExam</h1>
+ 		  <h1>MockExam</h1>
       <br>
       <br>
       <br>
       <br>
       <a href="adminlogin.html">
-      <button class="button">Admin  </button>
+      <button class="button">Admin</button>
       </a>
       &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-   <button class="button">User</button>
+      <a href="usersignup.html">
+      <button class="button">Candidate</button></a>
     </div>
-   </body>
+  </body>
 </html>
