--- a/MockExam/New folder/usersignup.html
+++ b/MockExam/New folder/usersignup.html
@@ -24,21 +24,23 @@
 </style>
 <title>User - Signup </title><head>
 <body>
-<h1 align="center">MOCK EXAM</h1>
-<h4 align="center">User Details</h4>
-
-<form  	align="center" action="saveuser">
-<table align="center">
-<tr>
-<td> Name :</td><td> <input type="text" name="name"/></td>
-</tr>
-<tr>
-<td>Regiser Number :</td><td> <input type="text" name="regno"/> </td>
-</tr>
-</table>
-<input type="submit" name="sub" value="submit"> 
-</form>
-
-<a href="AdminOptions.html"><input type="button" name="cancel" value="cancel"/> </a>
+	<h1 align="center">MOCK EXAM</h1>
+	<h4 align="center">User Details</h4>
+	<form  	align="center" action="save">
+		<table align="center">
+			<tr>
+			<td> Name :</td><td> <input type="text" name="name"/></td>
+			</tr>
+			<tr>
+			<td>Regiser Number :</td><td> <input type="text" name="regno"/> </td>
+			</tr>
+		
+		<tr>
+		<td><input type="submit" name="sub" value="submit" /></td> 
+	</form>
+	
+	<td><a href="AdminOptions.html"><input type="button" name="cancel" value="cancel"/> </a></td>
+	</tr>
+	</table>
 </body>
 </html>
