http://jira.bytatech.com:8080/browse/IN-8770

--- a/MockExam/New folder/useroptions.html
+++ b/MockExam/New folder/useroptions.html
@@ -34,7 +34,7 @@
 </head>
 <body>
 <table>
-<tr><a href=""> <button class="button">Start Exam</button> </a></tr>
+<tr><a href="startexam.jsp"> <button class="button">Start Exam</button> </a></tr>
 <tr><a href=""> <button class="button">Exam Instructions </button> </a></tr>
 </table>      
 </body>
