--- a/MockExam/New folder/useroptions.html
+++ b/MockExam/New folder/useroptions.html
@@ -33,9 +33,12 @@
 </style>
 </head>
 <body>
+<form action="startexam.jsp" >
 <table>
-<tr><a href="startexam.jsp"> <button class="button">Start Exam</button> </a></tr>
+<input type="hidden"  value="0" name = "qCount">
+<tr> <button class="button"> Start Exam</button> </tr>
 <tr><a href=""> <button class="button">Exam Instructions </button> </a></tr>
 </table>      
+</form>
 </body>
 </html>
