http://jira.bytatech.com:8080/browse/IN-8845

--- a/MockExam/New folder/useroptions.html
+++ b/MockExam/New folder/useroptions.html
@@ -33,7 +33,7 @@
 </style>
 </head>
 <body>
-<form action="startexam.jsp" >
+<form action="SetExam" >
 <table>
 <input type="hidden"  value="0" name = "qCount">
 <tr> <button class="button"> Start Exam</button> </tr>
