http://jira.bytatech.com:8080/browse/IN-8968

--- a/MockExam/New folder/AdminOptions.html
+++ b/MockExam/New folder/AdminOptions.html
@@ -1,49 +1,46 @@
 <html>
   <head>
     <title>Mock Exam</title>
-    	<style>
+    	    	<style>
 		body{
-    		 background-color:#FF6F61;
-         text-align:center;	
-		    }
+		 background-color:#e1b382 ;	
+      text-align:center;  
+		
+		}	
 		h1 {
   			color: black;
   			text-align: center;
   			font-family: courier;
-  			}
- .button {
-  position: relative;
-  background-color: #4CAF50;
-  border: none;
-  font-size: 28px;
-  color: #FFFFFF;
-  padding: 20px;
-  width: 200px;
-  text-align: center;
-  -webkit-transition-duration: 0.4s; 
-  transition-duration: 0.4s;    
-  text-decoration: none;
-  overflow: hidden;
-  cursor: pointer;
-  }
+			}
+
 	</style>
   </head>
 
    <body>
-  	  <h1>MockExam</h1>
+   <div align="center" style="background-color:#c89666;">
+		<br>
+		<br>
+		<font size="8"> Admin Option</font>
+		<br>
+		<br>
+</div>
       <br>
       <br> 
       <br>
       <br>
       <a href="addquestion.html">
-      <button class="Add Question ">Add Question </button>
+      <button >Add Question </button>
       </a>
       <a href="viewQuestions.jsp">
-      <button class="View Question">View Question </button>
+      <button >View Question </button>
       </a>
 
       <a href="viewQuestions.jsp">
-      <button class="Edit Question">Edit Question </button><br>         
+      <button >Edit Question </button>         
+      </a>
+      
+      <a href="ViewCandidate.jsp">
+      <button >View Results </button><br>         
       </a>
    </body>
 </html>
