--- a/MockExam/New folder/useroptions.html
+++ b/MockExam/New folder/useroptions.html
@@ -29,16 +29,26 @@
 		  overflow: hidden;
 		  cursor: pointer;
 		  font-size: 16px;
+		  
 		  }
 </style>
 </head>
 <body>
+<div align="center" style="background-color:#B22222;">
+		<br>
+		<br>
+		<font size="9">Candidate Option</font>
+		<br>
+		<br>
+</div>
 <form action="SetExam" >
+<div  style="padding-top: 10%;">
 <table>
 <input type="hidden"  value="0" name = "qCount">
 <tr> <button class="button"> Start Exam</button> </tr>
 <tr><a href=""> <button class="button">Exam Instructions </button> </a></tr>
 </table>      
 </form>
+</div>
 </body>
 </html>
