--- a/MockExam/New folder/usersignup.html
+++ b/MockExam/New folder/usersignup.html
@@ -24,20 +24,27 @@
 </style>
 <title>User - Signup </title><head>
 <body>
-	<h1 align="center">MOCK EXAM</h1>
-	<h4 align="center">User Details</h4>
-	<form  	align="center" action="save">
+<div align="center" style="background-color:#B22222;">
+		<br>
+		<br>
+		<font size="9">Candidate Register</font>
+		<br>
+		<br>
+</div>
+	
+	<h2 align="center">User Details</h2>
+<form  	align="center" action="save">
 		<table align="center">
 			<tr>
 			<td> Name :</td><td> <input type="text" name="name"/></td>
 			</tr>
 			<tr>
-			<td>Regiser Number :</td><td> <input type="text" name="regno"/> </td>
+			<td>Register Number :</td><td> <input type="text" name="regno"/> </td>
 			</tr>
 		
 		<tr>
 		<td><input type="submit" name="sub" value="submit" /></td> 
-	</form>
+</form>
 	
 	<td><a href="AdminOptions.html"><input type="button" name="cancel" value="cancel"/> </a></td>
 	</tr>
