http://jira.bytatech.com:8080/browse/IN-9252

--- a/MockExam/maven/src/main/webapp/addquestion.html
+++ b/MockExam/maven/src/main/webapp/addquestion.html
@@ -24,36 +24,40 @@
 </style>
 <title>HomePage</title><head>
 <body>
-<h1 align="center">MOCK EXAM</h1>
-<h4 align="center">Add A New Question</h4>
-
-<form  	align="center" action="save.jsp">
-<table align="center">
-<tr>
-<td>Eneter the question  :</td><td> <input type="text" name="question"/> </td>
-</tr>
-<tr>
-<td>Correct Answere  :</td><td> <input type="text" name="answere"/>  </td>
-</tr>
-<tr>
-<td>option 1 :</td><td><input type="text" name="opt1"/> <br> </td>
-</tr>
-<tr>
-<td>option 2 :</td><td> <input type="text" name="opt2"/> </td>
-</tr>
-<tr>
-<td>option 3 :</td><td> <input type="text" name="opt3"/> </td>
-</tr>
-</table>
-
-<br>
-<br>
-<input type="submit" name="sub" value="submit"> 
-<a href="AdminOptions.html">
-<input type="button" name="cancel" value="cancel"/> </a>
-
-
-
+	<h1 align="center">MOCK EXAM</h1>
+	<h4 align="center">Add A New Question</h4>
+	<form align="center" action="add">
+		<table align="center">
+			<tr>
+			<td>Eneter the question  :</td>
+			<td> <input type="text" name="question"/> </td>
+			</tr>
+			<tr>
+			<td>Correct Answere  :</td>
+			<td> <input type="text" name="answere"/>  </td>
+			</tr>
+			<tr>
+			<td>option 1 :</td>
+			<td><input type="text" name="opt1"/> <br> </td>
+			</tr>
+			<tr>
+			<td>option 2 :</td>
+			<td> <input type="text" name="opt2"/> </td>
+			</tr>
+			<tr>
+			<td>option 3 :</td>
+			<td> <input type="text" name="opt3"/> </td>
+			</tr>
+		</table>
+		
+		<br>
+		<br>
+		<input type="submit" name="sub" value="submit"> 
+		<a href="AdminOptions.html">
+		<input type="button" name="cancel" value="cancel"/> </a>
+	
+	
+	
 
 </body>
 </html>
