--- a/MockExam/maven/src/main/webapp/adminlogin.html
+++ b/MockExam/maven/src/main/webapp/adminlogin.html
@@ -2,34 +2,35 @@
 	
 	<head>
 		<title>Login User</title>
-			<style>
+		    	<style>
 		body{
-		 background-color: #f7cac9  ;	
-		 margin-top:250px;
-		 text-align:center;
-		}
-
+		 background-color:#f7cac9 ;	
+      text-align:center;  
+		
+		}	
 		h1 {
   			color: black;
   			text-align: center;
-  			font-family: verdana;
+  			font-family: courier;
 			}
-	.button {
+.button {
+  padding: 15px 25px;
+  font-size: 24px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
   background-color: #4CAF50;
   border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
 
- 
-
-  .button:hover {  background-color: black;}
-}	
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
 	</style>
 	</head>
 	<body>
@@ -44,16 +45,16 @@
 		<a href="index.html"><input type="submit" class="button" value="Home"></a>	
 
 		<script language="javascript">
-		function check(form)/*function to check userid & password*/
+		function check(form)
 		{
-		 /*the following code checkes whether the entered userid and password are matching*/
+
 		 if(form.username.value == "admin" && form.password.value == "admin")
 		  {
-		    window.open("AdminOptions.html","_self")/*opens the target page while Id & password matches*/
+		    window.open("AdminOptions.html","_self")
 		  }
 		 else
 		 {
-		  	alert("Error Password or Username")/*displays error message*/
+		  	alert("Error Password or Username")
 		 }
 		}
 		</script>
