--- a/MockExam/maven/src/main/webapp/index.html
+++ b/MockExam/maven/src/main/webapp/index.html
@@ -6,7 +6,7 @@
 		 background-color:#f7cac9 ;	
       text-align:center;  
 		
-		}
+		}	
 		h1 {
   			color: black;
   			text-align: center;
@@ -33,7 +33,8 @@
 	</style>
   </head>
   <body>
-   	<div>
+
+   	<div align="center">
  		  <h1>MockExam</h1>
       <br>
       <br>
