http://jira.bytatech.com:8080/browse/IN-9310

--- a/MockExam/maven/src/main/webapp/ExamInstruction.html
+++ b/MockExam/maven/src/main/webapp/ExamInstruction.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Welcome</title>
- <style>
+
+<style>
 		body{
     		 background-color:#FF6F61;
          text-align:center;	
@@ -32,26 +31,18 @@
 		  
 		  }
 </style>
+<meta charset="ISO-8859-1">
+<title>Instructions</title>
+
+
 </head>
 <body>
 <div align="center" style="background-color:#B22222;">
 		<br>
 		<br>
-		<font size="9">Candidate Option</font>
+		<font size="9">Candidate Instructions</font>
 		<br>
 		<br>
 </div>
-<form action="SetExam" >
-<div  style="padding-top: 10%;">
-<table>
-<input type="hidden"  value="0" name = "qCount">
-
-<tr> <button class="button"> Start Exam</button> </tr>
-</table>    
-</div>  
-
-</form>
-<tr> <a href="ExamInstruction.html"> <button class="button">Exam Instructions </button> </a></tr>
-
 </body>
 </html>
