--- a/MockExam/maven/src/main/webapp/addquestion.html
+++ b/MockExam/maven/src/main/webapp/addquestion.html
@@ -26,7 +26,7 @@
 <body>
 	<h1 align="center">MOCK EXAM</h1>
 	<h4 align="center">Add A New Question</h4>
-	<form align="center" action="add">
+	<form align = "center" action="add">
 		<table align="center">
 			<tr>
 			<td>Eneter the question  :</td>
@@ -56,7 +56,7 @@
 		<a href="AdminOptions.html">
 		<input type="button" name="cancel" value="cancel"/> </a>
 	
-	
+</form>
 	
 
 </body>
