--- a/MockExam/maven/src/main/webapp/loginfailed.html
+++ b/MockExam/maven/src/main/webapp/loginfailed.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+body {
+	background-color: #FF6F61;
+}
+
+.button {
+	background-color: #4CAF50;
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer; .
+	button: hover{  background-color: black;
+}
+}
+</style>
 <meta charset="ISO-8859-1">
 <title>Error</title>
 </head>
 <body>
-hai
+	<div class="call-text">
+		<h1>Login Failed Go Back</h1>
+		<form>
+			<button formaction="login">Back</button>
+		</form>
+	</div>
 </body>
 </html>
