--- a/ContactApp/AddContact.html
+++ b/ContactApp/AddContact.html
@@ -13,7 +13,7 @@
             <div id="login-row" class="row justify-content-center align-items-center">
                 <div id="login-column" class="col-md-6">
                     <div id="login-box" class="col-md-12">
-                        <form id="login-form" class="form" action="AddContact.jsp" method="get">
+                        <form id="login-form" class="form" action="AddContact" method="POST">
                             <h3 class="text-center text-info">Add Contact</h3>
                             <div class="form-group">
                                 <label for="number" class="text-info">Enter the Name</label><br>
