--- a/ContactApp/UpdateName.html
+++ b/ContactApp/UpdateName.html
@@ -13,7 +13,7 @@
             <div id="login-row" class="row justify-content-center align-items-center">
                 <div id="login-column" class="col-md-6">
                     <div id="login-box" class="col-md-12">
-                        <form id="login-form" class="form" action="UpdateName.jsp" method="get">
+                        <form id="login-form" class="form" action="UpdateContact" method="Post">
                             <h3 class="text-center text-info">Update Contact</h3>
                             <div class="form-group">
                                 <label for="name" class="text-info">Old Name</label><br>
