--- a/ContactApp/box.html
+++ b/ContactApp/box.html
@@ -4,7 +4,7 @@
 <script >
 	$(document).ready(function(){
 
-	swal ( "Incorrect Password !!!, Please try Again" )
+	swal ( "Contact Added Successfully" )
 });
 
 </script>
