http://jira.bytatech.com:8080/browse/IN-13008

--- a/ContactApp/index.html
+++ b/ContactApp/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<htlm>
-	<head>
-		<title> View Database</title>
-	</head>
-	<body>
-	<h1 align = center><b><u> Contact APP </u></b></h1></a>
-    <p align = center>contact app developed by Faris for LxiTechnologies pvt.ltd</p>
-		<a align=center href = AddContact.html > ADD Contact</a></br>
-		<a align=center href = DeleteContact.html > Delete Contact</a></br>
-		<a align=center href = UpdateContact.html > Update Contact</a></br>
-		<a  href = ViewPage.jsp > View Contact</a></br>
-	</body>
-</htlm>
+<html>
+<head>
+	<title>Contact Application</title>
+</head>
+<body>
+	<link href="style1.css" rel="stylesheet" type ="text/css">
+	<div class="testbox">
+		<h1> Contact Application</h1>
+		<h2> by Lxisoft Technologies pvt.ltd</h2>
+		<p class="credits">It is a contact app developed by Faris for bytatech technologies under Lxisoft Technologies pvt.ltd </p>
+	<div class="buttons">
+		<a href="ViewDatabase.jsp" class="button">View Contact Database</a>
+		
+</body>
+</html>
