--- a/ContactApp/addContact.html
+++ b/ContactApp/addContact.html
@@ -6,11 +6,11 @@
 <body bgcolor="Red">
 	<center>
 		<h1> ADD CONTACT </h1>
-		<form action="addContact.jsp" method="GET">
+		<form action="addContact.jsp" method="get">
 		<table>
 			<tr><td>FIRST NAME : </td><td><input type="text" name="fname"></td></tr>
 			<tr><td>LAST NAME : </td><td><input type="text" name="lname"></td></tr>
-			<tr><td>EMAIL ID : </td><td><input type="text" name="email"></td></tr>
+			<tr><td>EMAIL ID : </td><td><input type="text" name="mailid"></td></tr>
 			<tr><td>PHONE NUMBER : </td><td><input type="text" name="number"></td></tr>
 			<tr><td></td><td><input type="submit" value="SUBMIT"></td></tr>
 			<tr><td></td><td><a href="index.html" type="submit"> INDEX PAGE </a></td></tr>
