http://jira.bytatech.com:8080/browse/IN-13072

--- a/ContactApp/UpdateContacts.html
+++ b/ContactApp/UpdateContacts.html
@@ -8,9 +8,9 @@
   <div class="testbox">
     <h1><a href="Index.html" class="header"> Contact Application</a></h1>
     <h2> by Lxisoft Texhnologies pvt.ltd</h2>
-    <form action=# method="post">
+    <form action=UpdateContacts.jsp method=POST>
      <label id="icon" for="name"><i class="icon-envelope "></i></label>
-    <input type="text" name="deleteIndexID" id="name" placeholder="Enter ID to Update" required/></br>
+    <input type="text" name="ID" id="ID" placeholder="Enter ID to Update" required/></br>
   <label id="icon" for="name"><i class="icon-envelope "></i></label>
   <input type="text" name="name" id="name" placeholder="Enter First Name" required/></br>
      <label id="icon" for="name"><i class="icon-envelope "></i></label>
@@ -19,9 +19,9 @@
   <input type="text" name="name" id="name" placeholder="Email" required/></br>
 <label id="icon" for="name"><i class="icon-envelope "></i></label>
   <input type="text" name="name" id="name" placeholder="Enter Contact Number" required/></br>
+  <input type="submit" value="Update" />
 </form>
-  <a href="#" class="updatebutton"> Update </a>
-   <a href="#" class="button">View Database</a>
+   <a href="ViewDatabase.jsp" class="button">View Database</a>
 
 
 </div>
