--- a/ContactApp/AddContacts.html
+++ b/ContactApp/AddContacts.html
@@ -8,22 +8,22 @@
 <div class="testbox">
   <h1>Registration</h1>
 
-  <form action="/">
+  <form action="AddContacts.jsp" method ="post">
   <hr>
   <label id="icon" for="name"><i class="icon-envelope "></i></label>
-  <input type="text" name="name" id="name" placeholder="First Name" required/></br>
+  <input type="text" name="firstname" id="firstname" placeholder="First Name" required/></br>
   <label id="icon" for="name"><i class="icon-user"></i></label>
-  <input type="text" name="name" id="name" placeholder="Last Name" required/></br>
+  <input type="text" name="lastname" id="lastname" placeholder="Last Name" required/></br>
   <label id="icon" for="name"><i class="icon-shield"></i></label>
-  <input type="text" name="name" id="name" placeholder="Email" required/></br>
+  <input type="email" name="email" id="email" placeholder="Email" required/></br>
   <label id="icon" for="name"><i class="icon-user"></i></label>
-  <input type="text" name="name" id="name" placeholder="Contact Number" required/></br>
+  <input type="text" name="contactnumber" id="contactnumber" placeholder="Contact Number" required/></br>
 <div class="checkbox">
    <input type="checkbox" value="None" id="radioOne" name="T&C" required/></br>
       <label for="checkbox" class="box" ></div>
      <div class ="tc"><p> By clicking Register, you agree on our <a href="#">terms and condition</a>.</p></label></div>
-   <a href="#" class="registerbutton"> Register</a>
-   <a href="#" class="button">View Database</a>
+   <input type="submit" value="Register" href="AddContacts.jsp" class="registerbutton">
+   <a href="ViewDatabase.jsp" class="button">View Database</a>
   </form>
 </div>
 </body>
