--- a/ContactApp/DeleteContacts.html
+++ b/ContactApp/DeleteContacts.html
@@ -8,11 +8,11 @@
   <div class="testbox">
     <h1><a href="Index.html" class="header"> Contact Application</a></h1>
     <h2> by Lxisoft Texhnologies pvt.ltd</h2>
-    <form action=# method="post">
+    <form action=DeleteContacts.jsp method="post">
      <label id="icon" for="name"><i class="icon-envelope "></i></label>
-  <input type="text" name="name" id="name" placeholder="Enter ID to Delete" required/></form>
-  <a href="#" class="deletebutton"> Delete</a>
-   <a href="#" class="button">View Database</a>
+  <input type="text" name="delete" id="delete" placeholder="Enter ID to Delete" required/>
+<input type="submit" value="Delete"/></form>
+   <a href="ViewDatabase.jsp" class="button">View Database</a>
 
 
 </div>
