http://jira.bytatech.com:8080/browse/IN-13086

--- a/ContactApp/Delete.html
+++ b/ContactApp/Delete.html
@@ -6,9 +6,9 @@
 <body bgcolor="Green">
 	<center>
 		<h1> DELETE OPTION </h1>
-		<form action="Delete" method="post">
+		<form action="Delete.jsp" method="post">
 		<table>
-		    <tr><td>ENTER THE FIRST NAME YOU WANT TO DELETE : </td><td><input type="text" name="fname"></td></tr>
+		    <tr><td>ENTER THE FIRST NAME YOU WANT TO DELETE : </td><td><input type="text" name="name"></td></tr>
 			<tr><td></td><td><input type="submit" value="SUBMIT"></td></tr>
 			<tr><td></td><td><a href="index.html" type="submit"> INDEX PAGE </a></td></tr>
 		</table>	
