--- a/ContactApp/Search.html
+++ b/ContactApp/Search.html
@@ -3,12 +3,12 @@
 <head>
 	<title> SEARCH OPTION </title>
 </head>
-<body bgcolor="Green">
+<body bgcolor="pink">
 	<center>
 		<h1> SEARCH OPTION </h1>
-		<form action="Search" method="post">
+		<form action="Search.jsp" method="get">
 		<table>
-		    <tr><td>ENTER THE FIRST NAME TO SEARCH : </td><td><input type="text" name="fname"></td></tr>
+		    <tr><td>ENTER THE FIRST NAME TO SEARCH : </td><td><input type="text" name="name"></td></tr>
 			<tr><td></td><td><input type="submit" value="SUBMIT"></td></tr>
 			<tr><td></td><td><a href="index.html" type="submit"> INDEX PAGE </a></td></tr>
 		</table>	
