--- a/ContactApp/addContact.html
+++ b/ContactApp/addContact.html
@@ -1,21 +1,47 @@
 <!DOCTYPE html>
 <html>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <head>
-	<title> Add Contact </title>
+	<title></title>
 </head>
-<body bgcolor="Red">
-	<center>
-		<h1> ADD CONTACT </h1>
-		<form action="addContact.jsp" method="get">
-		<table>
-			<tr><td>FIRST NAME : </td><td><input type="text" name="fname"></td></tr>
-			<tr><td>LAST NAME : </td><td><input type="text" name="lname"></td></tr>
-			<tr><td>EMAIL ID : </td><td><input type="text" name="mailid"></td></tr>
-			<tr><td>PHONE NUMBER : </td><td><input type="text" name="number"></td></tr>
-			<tr><td></td><td><input type="submit" value="SUBMIT"></td></tr>
-			<tr><td></td><td><a href="index.html" type="submit"> INDEX PAGE </a></td></tr>
-		</table>	
-	</form>
-	</center>
+<body>
+	    <div id="login">
+        <h3 class="text-center text-white pt-5">Add Contact</h3>
+        <div class="container">
+            <div id="login-row" class="row justify-content-center align-items-center">
+                <div id="login-column" class="col-md-6">
+                    <div id="login-box" class="col-md-12">
+                        <form id="login-form" class="form" action="addContact.jsp" method="get">
+                            <h3 class="text-center text-info">Add Contact</h3>
+                            <div class="form-group">
+                                <label for="number" class="text-info">Enter the Name</label><br>
+                                <input type="name" name="name" id="name" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="number" class="text-info">Enter the LastName</label><br>
+                                <input type="name" name="lname" id="lname" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="number" class="text-info">Enter the Number</label><br>
+                                <input type="number" name="number" id="name" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="email" class="text-info">Enter the Email Id</label><br>
+                                <input type="email" name="email" id="name" class="form-control">
+                            </div>
+
+                            <div class="form-group">
+                                
+                                <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
+                            </div>
+                          
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
