--- a/ContactApp/DeleteContacts.html
+++ b/ContactApp/DeleteContacts.html
@@ -11,7 +11,7 @@
     <form action=DeleteContacts.jsp method="post">
      <label id="icon" for="name"><i class="icon-envelope "></i></label>
   <input type="text" name="delete" id="delete" placeholder="Enter ID to Delete" required/>
-<input type="submit" value="Delete"/></form>
+<input type="submit" value="Delete" class="registerbutton"/></form>
    <a href="ViewDatabase.jsp" class="button">View Database</a>
 
 
