http://jira.bytatech.com:8080/browse/IN-13222

--- a/ContactApp/UpdateContacts.html
+++ b/ContactApp/UpdateContacts.html
@@ -12,13 +12,13 @@
      <label id="icon" for="name"><i class="icon-envelope "></i></label>
     <input type="text" name="ID" id="ID" placeholder="Enter ID to Update" required/></br>
   <label id="icon" for="name"><i class="icon-envelope "></i></label>
-  <input type="text" name="name" id="name" placeholder="Enter First Name" required/></br>
+  <input type="text" name="firstname" id="firstname" placeholder="Enter First Name" required/></br>
      <label id="icon" for="name"><i class="icon-envelope "></i></label>
-  <input type="text" name="name" id="name" placeholder=" Enter Last Name" required/></br>
+  <input type="text" name="lastname" id="lastname" placeholder=" Enter Last Name" required/></br>
 <label id="icon" for="name"><i class="icon-envelope "></i></label>
-  <input type="text" name="name" id="name" placeholder="Email" required/></br>
+  <input type="text" name="email" id="email" placeholder="Email" required/></br>
 <label id="icon" for="name"><i class="icon-envelope "></i></label>
-  <input type="text" name="name" id="name" placeholder="Enter Contact Number" required/></br>
+  <input type="text" name="contactnumber" id="contactnumber" placeholder="Enter Contact Number" required/></br>
   <input type="submit" value="Update" />
 </form>
    <a href="ViewDatabase.jsp" class="button">View Database</a>
