http://jira.bytatech.com:8080/browse/IN-13221

--- a/ContactApp/SearchContacts.html
+++ b/ContactApp/SearchContacts.html
@@ -8,9 +8,9 @@
   <div class="testbox">
     <h1><a href="Index.html" class="header"> Contact Application</a></h1>
     <h2> by Lxisoft Texhnologies pvt.ltd</h2>
-    <form action=DeleteContacts.jsp method="post">
+    <form action=SearchContacts.jsp method="post">
      <label id="icon" for="name"><i class="icon-envelope "></i></label>
-  <input type="text" name="delete" id="delete" placeholder="Enter FirstName to Search " required/>
+  <input type="text" name="search" id="search" placeholder="Enter First Name to Search " required/>
 <input type="submit" value="search" class="searchbutton"/></form>
    <a href="ViewDatabase.jsp" class="button">View Database</a>
 
