--- a/ContactApp/SignIn.html
+++ b/ContactApp/SignIn.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Log in</title>
+	<title>Sign up</title>
 </head>
 <body>
-	<h1>Log in</h1><br/>
-	<form action="Login.jsp">
+	<h1>Sign up</h1><br/>
+	<form action="SignIn.jsp">
 		User name <br/><input type="text" name="userName">
 		<br/>
 		Password <br/><input type="password" name="password">
 		<br>
 		<br>
-		<input type="submit" value="Login">
+		<input type="submit" value="Signup">
 	</form>
 </body>
 </html>
