http://jira.bytatech.com:8080/browse/IN-15128

--- a/ContactApp/Addcontact.html
+++ b/ContactApp/Addcontact.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 	<form action="Addcontact.jsp">
-		Contact Name : <br/><input type="text" name="contactName">
-		<br/>
-		Number : <br/><input type="text" name="number">
-		<br/>
-		Email : <br/><input type="text" name="mailid">
+		Contact Name : <br><input type="text" name="contactName">
+		<br>
+		Number : <br><input type="text" name="number">
+		<br>
+		Email : <br><input type="text" name="mailid">
 		<br>
 		<br>
 		<input type="submit" value="Add">
