http://jira.bytatech.com:8080/browse/IN-15170

--- a/ContactApp/Addcontact.html
+++ b/ContactApp/Addcontact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
 <head>
 	<title>Add Contact</title>
@@ -15,4 +15,4 @@
 		<input type="submit" value="Add">
 	</form>
 </body>
-</html>
+</html>-->
