--- a/ContactApp/index.html
+++ b/ContactApp/index.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 	<h1>Contact App</h1>
-	<a href="Login.html">Log_in</a>
+	<a href="LogIn.jsp">Log_in</a>
 	<br/>
 	<br>
-	<a href="SignIn.html">Sign_up</a>
+	<a href="SignIn.jsp">Sign_up</a>
 	<br>
 </body>
 </html>
