--- a/ContactApp/Login.html
+++ b/ContactApp/Login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
 <head>
 	<title>Log In</title>
@@ -19,4 +19,4 @@
     	<a href="index.html">Back</a>
 	</form>
 </body>
-</html>
+</html>-->
