--- a/ContactApp/SignIn.html
+++ b/ContactApp/SignIn.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
 <head>
 	<title>Sign up</title>
@@ -14,4 +14,4 @@
 		<input type="submit" value="Signup">
 	</form>
 </body>
-</html>
+</html>-->
