http://jira.bytatech.com:8080/browse/IN-15242

--- a/ContactApp/SignIn.html
+++ b/ContactApp/SignIn.html
@@ -1,11 +1,11 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Sign up</title>
 </head>
 <body>
 	<h1>Sign up</h1><br/>
-	<form action="SignIn.jsp">
+	<form action="Signin">
 		User name <br/><input type="text" name="userName">
 		<br/>
 		Password <br/><input type="password" name="password">
@@ -14,4 +14,4 @@
 		<input type="submit" value="Signup">
 	</form>
 </body>
-</html>-->
+</html>
