--- a/ContactApp/index.html
+++ b/ContactApp/index.html
@@ -8,7 +8,7 @@
 	<a href="LogIn.jsp">Log_in</a>
 	<br/>
 	<br>
-	<a href="SignupPage.jsp">Sign_up</a>
+	<a href="SignIn.html">Sign_up</a>
 	<br>
 </body>
 </html>
