http://jira.bytatech.com:8080/browse/IN-15347

--- a/ContactApp/index.html
+++ b/ContactApp/index.html
@@ -4,11 +4,15 @@
 	<title>Contact App</title>
 </head>
 <body>
-	<h1>Contact App</h1>
-	<a href="LogIn.jsp">Log_in</a>
-	<br/>
-	<br>
-	<a href="SignIn.html">Sign_up</a>
-	<br>
+	<center>
+		<h1>Contact App</h1>
+		<br>
+		<h3>
+			<a href="add.html"><input type="button" value="New Contact"></a>
+			&nbsp;&nbsp;&nbsp;
+			<a href="viewContact.jsp"><input type="button" value="Contacts"></a>
+		</h3>
+		&nbsp
+	</center>
 </body>
 </html>
