http://jira.bytatech.com:8080/browse/IN-15383

--- a/ContactApp/index.html
+++ b/ContactApp/index.html
@@ -10,7 +10,7 @@
 		<h3>
 			<a href="add.html"><input type="button" value="New Contact"></a>
 			&nbsp;&nbsp;&nbsp;
-			<a href="viewContact.jsp"><input type="button" value="Contacts"></a>
+			<a href="view.jsp"><input type="button" value="Contacts"></a>
 		</h3>
 		&nbsp
 	</center>
