--- a/ContactApp/add.html
+++ b/ContactApp/add.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 	<h1>Adding Contact</h1>
-		<form  method="GET" action="contactAdd" >
+		<form action="contactAdd" method="get">
 			
 			Name:<input type="text" placeholder="Your Name" name="name" required><br><br>
-			Number:<input type="number" placeholder="Your Number" name="number" required><br><br>
+			Number:<input type="text" placeholder="Your Number" name="number" required><br><br>
 			Email:<input type="text" placeholder="Your Email id" name="mail" required><br><br>
 		    <input type="submit" class="button" value="Add">
 		</form>
