--- a/ContactApp/add.html
+++ b/ContactApp/add.html
@@ -7,9 +7,9 @@
 	<h1>Adding Contact</h1>
 		<form action="contactAdd" method="get">
 			
-			Name:<input type="text" placeholder="Your Name" name="name" required><br><br>
-			Number:<input type="text" placeholder="Your Number" name="number" required><br><br>
-			Email:<input type="text" placeholder="Your Email id" name="mail" required><br><br>
+			Name:<input type="text" placeholder="Enter Name" name="name" required><br><br>
+			Number:<input type="text" placeholder="Enter Number" name="number" required><br><br>
+			Email:<input type="text" placeholder="Enter Email id" name="mail" required><br><br>
 		    <input type="submit" class="button" value="Add">
 		</form>
 		<a href="index.html"><input type="submit" class="button" value="Home"></a>	
