http://jira.bytatech.com:8080/browse/IN-15455

--- a/ContactApp/index.html
+++ b/ContactApp/index.html
@@ -8,7 +8,7 @@
 		<h1>Contact App</h1>
 		<br>
 		<h2>
-			<a href="add.html"><input type="button" value="New Contact"></a>
+			<a href="signup.html"><input type="button" value="New Contact"></a>
 			&nbsp;&nbsp;&nbsp;
 			<a href="view.jsp"><input type="button" value="Contacts"></a>
 		</h2>
