--- a/ContactApp/index.html
+++ b/ContactApp/index.html
@@ -8,9 +8,9 @@
 		<h1>Contact App</h1>
 		<br>
 		<h2>
-			<a href="signup.html"><input type="button" value="New Contact"></a>
+			<a href="signup.html"><input type="button" value="Sign up"></a>
 			&nbsp;&nbsp;&nbsp;
-			<a href="view.jsp"><input type="button" value="Contacts"></a>
+			<a href="login.html"><input type="button" value="Log In"></a>
 		</h2>
 		&nbsp
 	</center>
