--- a/ContactApp/search.html
+++ b/ContactApp/search.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h2>
-		<form action="search" method="get">
+		<form action="searchView.jsp">
 			<input type="text" placeholder="Enter name to search" name="name">
 			<input type="submit" class="button" value="Search">
 		</form>
