http://jira.bytatech.com:8080/browse/IN-15571

--- a/ContactApp/index.html
+++ b/ContactApp/index.html
@@ -10,7 +10,7 @@
 		<h2>
 			<a href="signup.html"><input type="button" value="Sign up"></a>
 			&nbsp;&nbsp;&nbsp;
-			<a href="login.html"><input type="button" value="Log In"></a>
+			<a href="view.jsp"><button class="button">LogIn</button></a>
 		</h2>
 		&nbsp
 	</center>
