http://jira.bytatech.com:8080/browse/IN-16081

--- a/ContactApp/signup.html
+++ b/ContactApp/signup.html
@@ -9,13 +9,13 @@
 	<center>
 		<h2>
 			<form action = signup method="get">
-				<input type="text" placeholder="Enter the UserName" name="name">
+				<input type="text" placeholder="Enter the Name" name="name">
 				<br>
 				<br>
 				<input type="password" placeholder="Enter password" name="password">
 				<br>
 				<br>
-				<input type="submit" class="button" value="Signup">
+				<button type="submit">Signup</button>
 			</form>
 		</h2>
 	</center>
