--- a/ContactApp/index.html
+++ b/ContactApp/index.html
@@ -10,7 +10,7 @@
 		<h2>
 			<a href="signup.html"><input type="button" value="Sign up"></a>
 			&nbsp;&nbsp;&nbsp;
-			<a href="home.jsp"><button class="button">LogIn</button></a>
+			<a href="viewServlet"><button class="button">LogIn</button></a>
 		</h2>
 		&nbsp
 	</center>
