--- a/ContactApp/add.html
+++ b/ContactApp/add.html
@@ -12,6 +12,6 @@
 			Email:<input type="text" placeholder="Enter Email id" name="mail" required><br><br>
 		    <input type="submit" class="button" value="Add">
 		</form>
-		<a href="viewServlet"><input type="submit" class="button" value="Home"></a>	
+		<a href="view"><input type="submit" class="button" value="Home"></a>	
 </body>
 </html>
