http://34.87.37.122:8080/browse/IN-20711

--- a/ContactApp/com/lxisoft/Add.html
+++ b/ContactApp/com/lxisoft/Add.html
@@ -75,7 +75,7 @@ a {
 }
   </style>
   <body>
-     <form action="Add.jsp">
+     <form action="Add.jsp" method="POST">
           <div class="container">
            <center> <h1> <b>ADD CONTACT</b></h1></center>
             <hr>
