http://34.87.37.122:8080/browse/IN-20711

--- a/ContactApp/com/lxisoft/Delete.html
+++ b/ContactApp/com/lxisoft/Delete.html
@@ -10,7 +10,7 @@
   padding: 100px;
 }
 h1 {  
-  border-color: blue;  
+  border-color: rgb(255, 46, 31);  
   border-width: .25em;  
   border-style: double;  
   } 
@@ -81,8 +81,7 @@ input[type=text]:focus, input[type=password]:focus {
 
 
             <br>
-            <label for="email"><b>Email</b></label>
-            <input type="text" placeholder="Enter Email" name="email" required>
+          
             <hr>
 
             
