--- a/Dictionary/dictionary.html
+++ b/Dictionary/dictionary.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
+</html>
 <html>
-<head>
-<title> Dictionary</title>
-</head>
 <body>
-
-<h1> Dictionary Log in</h1>
-<p>This is a paragraph.</p>
-
+<form action="" method="POST">
+<H1><center>ENGLISH DICTIONORY</center>
+</h1> Username:<input type=text name="name1"><br>
+Password:<textarea name=address1> </textarea><br> 
+<input type=submit value=Login ><br>
+</form>
 </body>
 </html>
