--- a/VegetableStore/com/lxisoft/vegitables/vegitableStore.html
+++ b/VegetableStore/com/lxisoft/vegitables/vegitableStore.html
@@ -1,15 +1,20 @@
 <html>
  <head>
-
-  <tittle>VegitableStore</tittle>
   
    </head>
 <body>
+<form name = "login">
 
-<div style = "background-color : grey ; width : 500">
+Username<input type = "text" name = "text"><br>
+Password<input type = "Password" name = "text2"><br>
+<input name = "Button1" type = "Button" value = "submit">
+<input name = "Button2" type = "Reset" value = "Reset">
+
+</form>
+<div style = "color : RED ; width : 500">
 
 <h1>Welcome To VegitableStore</h1>
 </div>
-<img src = "WhatsAppImage.JPEG  "
+<img src = "WhatsAppImage.JPEG" 
 </body>
 </html>    
