--- a/VegetableStore/jsp/welcome1.html
+++ b/VegetableStore/jsp/welcome1.html
@@ -18,7 +18,7 @@
 </form>
 </div>
 
-<center><img src = "..\resources\picture\store.JPEG" width="400"></img></center>
+<center><img src = "..\resources\picture\store.jpeg" width="400"></img></center>
 
 </body>
 
