Contact App on process

--- a/ContactApp/FirstPage.html
+++ b/ContactApp/FirstPage.html
@@ -36,22 +36,17 @@
     <form action="ContactApp" method="post">
         <img src="2.webp">
         <h2>Enter The Name</h2>
-        <input type="text" name="name">
-        <h2>Enter The ContactNumber</h2>
-        <input type="text" name="contactNumber">
+        <input type="text" name="name" placeholder="    ">
+        <h2>Enter The Contact Number</h2>
+        <input type="text" name="contactNumber" required>
         <br><br>
         <button type="submit">Next</button>
-
-  
+       
         <select name="select">
             <option value="create">CREATE</option>
             <option value="read">READ</option>
-            <option value="update">UPDATE</option>
-            <option value="delete">DELETE</option>
         </select>
     </form>
-
-
     <form action="index.html" method="post">
         <a style="color: gold" href="index.html">Go Back</a>
     </form>
